# learn-dbt-course

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
app_dagster_dbt/: setup.cfg  setup.py
app_dagster_dbt/dbt_dagster/: __init__.py
app_dagster_dbt/dbt_dagster.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
app_dagster_dbt/dbt_dagster/assets/: __init__.py
app_dagster_dbt/jaffle_shop/: .gitignore
app_dagster_dbt/jaffle_shop/analyses/: compare_queries.sql
app_dagster_dbt/jaffle_shop/config/: .user.yml  profiles.yml
app_dagster_dbt/jaffle_shop/dbt_packages/audit_helper/macros/: compare_column_values.sql  compare_queries.sql  compare_relation_columns.sql  compare_relations.sql
app_dagster_dbt/jaffle_shop/dbt_packages/dbt_date/integration_tests/macros/: get_test_dates.sql
app_dagster_dbt/jaffle_shop/dbt_packages/dbt_date/macros/: get_base_dates.sql
app_dagster_dbt/jaffle_shop/dbt_packages/dbt_date/macros/_utils/: date_spine.sql
app_dagster_dbt/jaffle_shop/dbt_packages/dbt_date/macros/calendar_date/: convert_timezone.sql  date_part.sql  day_name.sql  day_of_week.sql  day_of_year.sql  month_name.sql  (+7 more)
app_dagster_dbt/jaffle_shop/models/marts/: fct_customer_orders.sql
app_dagster_dbt/jaffle_shop/models/staging/jaffle_shop/: sources.yml  stg_jaffle_shop__customers.sql  stg_jaffle_shop__orders.sql
app_dagster_dbt/jaffle_shop/models/staging/stripe/: sources.yml  stg_stripe__payments.sql
jaffle_shop/: .user.yml  packages.yml
jaffle_shop/models/legacy/: customer_orders.sql
jaffle_shop/models/sources/: seeds.yml
(+12 files in other folders)
