[tool.poetry]
name = "learn-dbt-course"
version = "0.1.0"
description = ""
authors = ["Guilherme da Silva <guilherme.laercio@stone.com.br>"]
readme = "README.md"
packages = [{include = "learn_dbt_course"}]

[tool.poetry.dependencies]
python = "^3.9"
dagster = "^1.3.14"
shandy-sqlfmt = {extras = ["jinjafmt"], version = "^0.18.1"}
dagster-dbt = "^0.19.14"
dagit = "^1.3.14"
dbt-core = "^1.5.3"
dbt-bigquery = "^1.5.3"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
